add LICENSE.md, errorprone and spotless